@@ -4,6 +4,8 @@ Revision history for JSON-Schema-Modern
           - minimum Perl version raised to 5.20
           - dropped bundling hyper-schema files, as they are not validatable
             without vocabulary support (see issue #44)
+          - & overload added to JSON::Schema::Modern::Result, for combining
+            results
 
 0.524     2021-11-10 04:36:49Z
           - some refactoring of vocabulary and document methods, to faciliate
